docs/references/v2.1/マトリクス_v2.md
# マトリクス v2（個人用MVP）

> 機能一覧v2に対応。MVP対象外（招待・ユーザーメンテ等）を除外し、新規画面/APIを反映。

## 1) 画面 × API 呼び出しマトリクス

凡例：R=取得 / W=更新・作成 / D=削除

| 画面ID | 画面名 | 主に呼ぶAPI | R/W/D |
| --- | --- | --- | --- |
| SCR-001 | サインアップ | API-001 | W |
| SCR-002 | サインイン | API-002 | W |
| SCR-003 | 通知許可/購読設定 | API-003 / API-005 / API-006 | R / W / W |
| SCR-006 | 通知設定（時刻・TZ） | API-003 / API-004 | R / W |
| SCR-010 | 商品一覧 | API-010 / API-016 | R / W（手動投入） |
| SCR-011 | 商品登録 | API-011 / API-014 | W / R（カテゴリ） |
| SCR-012 | 商品編集 | API-010 / API-012 / API-013 / API-017 / API-018 | R / W / D / W（スヌーズ）/ W（サイクル上書き） |
| SCR-013 | カテゴリ管理 | API-014 | R/W/D（**【v2.1】tracking_scope更新含む**） |
| SCR-015 | カテゴリ追跡設定【v2.1】 | API-019 | W（scope/通知/cycle_mode。scope切替でpendingリセット） |
| SCR-020 | 購入履歴一覧 | API-020 | R |
| SCR-021 | 購入登録モーダル | API-021 | W（→サイクル更新トリガー。**【v2.1】brand/URL保存**） |
| SCR-022 | 価格比較ビュー | API-020 | R |
| SCR-023 | 銘柄選択（買い足し）【v2.1】 | API-023 | R（銘柄一覧）→ ディープリンク |
| SCR-030 | トップ（買うべき） | API-030 | R（一覧+件数。**【v2.1】商品/カテゴリ混在**） |
| SCR-031 | 商品検索 | API-031 / API-014 | R / R（カテゴリ） |
| SCR-040 | 通知センター | API-040 / API-041 | R / W |

## 2) バッチ × API/COM 実行マトリクス

| バッチID | バッチ名 | 参照/更新 | 利用COM | 概要 |
| --- | --- | --- | --- | --- |
| BAT-001 | 購入リマインド通知（毎時） | API-030相当の抽出 / API-042（保存）/ API-005・006（失効時クリア） | COM-050 / COM-016 / COM-041 / COM-040 / COM-042 / COM-101 | notify_time一致ユーザー抽出→対象抽出（**【v2.1】scope分岐**）→本文生成→1通Push→保存→失効検知 |
| BAT-002 | 通知クリーンアップ（AM3:00） | notifications削除 | COM-100 | 7日超のnotifications削除 |

> KeepAlive（旧BAT-900）/ ヘルスチェック（旧API-900）は廃止。毎時/毎日バッチのDBアクセスがSupabase無料枠の7日休眠を回避するため不要。Vercel無料枠のCron1つ制限により、BAT-001とBAT-002は1つのCronに統合運用。

## 3) 画面横断で使う主なCOM

| 画面/機能 | 利用COM | 用途 |
| --- | --- | --- |
| SCR-011/012（商品登録・編集） | COM-011 / COM-015 / COM-104 | プラットフォーム判定 / 状態遷移 / バリデーション |
| SCR-021（購入登録） | COM-020 / COM-021 / COM-010 / COM-022 / COM-104 | 単価計算 / サイクル算出 / 次回日算出 / 底値更新 / バリデーション |
| SCR-013/015（カテゴリ追跡設定）【v2.1】 | COM-016 | scope分岐解決（サイクル/状態/通知の集計単位切替） |
| SCR-023（銘柄選択）【v2.1】 | COM-022 / COM-012 / COM-014 | 銘柄別の価格集計 / ディープリンク変換・実行 |
| 通知抽出【v2.1】 | COM-050 / COM-016 | scope準拠で商品/カテゴリ単位を出し分け |
| SCR-022（価格比較） | COM-023 | 価格比較指標算出 |
| SCR-030（トップ） | COM-010 / COM-043 | 次回日算出 / バッジ更新（起動時） |
| SCR-031（検索） | COM-030 | クエリビルダー |
| ディープリンク遷移 | COM-012 / COM-014 | 変換 / フォールバック実行 |
| Push受信（SW） | COM-043 | バッジ更新 |
| 全API | COM-001 / COM-102 / COM-103 | 認証ガード / 権限制御 / エラーハンドリング |

## 4) v1からの差分

- **除外**: API-007〜009A、API-015、SCR-004/005/014（MVP対象外へ）。
- **追加列/行**: SCR-006、API-016〜018、API-042、COM-042/043/015。
- **変更**: BAT-001 を毎時実行 + notify_time判定に。API-030 が件数も返す（バッジ流用）。SCR-021 が total_units/単価算出とサイクル更新を駆動。
- **注**: 旧マトリクスのAPI横並び表は、MVPでAPI数が増減したため「主に呼ぶAPI」方式に簡略化。

## 5) v2.1での差分（追跡単位 / カテゴリ単位サイクル）

- **追加画面/API**: SCR-015（カテゴリ追跡設定）→API-019、SCR-023（銘柄選択）→API-023。
- **追加COM**: COM-016（scope分岐解決）。BAT-001 と通知抽出（COM-050）が利用。
- **scope対応**: SCR-013/030、API-014/021/030、COM-021/022 に商品単位/カテゴリ単位の出し分けを反映。
- **置き換え**: SCR-014/API-015/COM-013（target_type運用）→ SCR-015/API-019/COM-016。
